# json-api-rs

./: Cargo.toml
rocket/: Cargo.toml
rocket/src/: error.rs  fairing.rs  lib.rs  request.rs  response.rs
src/: resource.rs
src/doc/: convert.rs  ident.rs  link.rs  mod.rs  object.rs  relationship.rs  specification.rs
src/query/: builder.rs  mod.rs  sort.rs
src/value/: convert.rs  mod.rs
src/value/collections/: map.rs  set.rs
src/value/fields/: key.rs  path.rs
src/view/: context.rs  render.rs
