[package]
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
categories = [
    "api-bindings",
    "encoding",
    "web-programming::http-server",
]
description = "Rocket support for the json-api crate"
documentation = "https://docs.rs/json-api-rocket/0.4"
license = "MIT/Apache-2.0"
name = "json-api-rocket"
readme = "README.md"
repository = "https://github.com/zacharygolba/json-api-rs"
version = "0.4.1"
edition = '2018'

[badges.appveyor]
repository = "zacharygolba/json-api-rs"

[badges.circle-ci]
repository = "zacharygolba/json-api-rs"

[badges.codecov]
repository = "zacharygolba/json-api-rs"

[dependencies]
lazy_static = "0.2.11"
rocket = { git = "https://github.com/SergioBenitez/Rocket/", rev = "c24f15c" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket/", rev = "c24f15c" }
serde = "1.0"
serde_json = "1.0"

[dependencies.json-api]
path = "../"
